--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/three": "^0.144.0",
     "@vueuse/core": "^3.0.35",
     "gsap": "^3.11.2",
+    "lil-gui": "^0.17.0",
     "three": "^0.144.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
