--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/three": "^0.144.0",
     "@vueuse/core": "^3.0.35",
+    "animate.css": "^4.1.1",
     "gsap": "^3.11.2",
     "lil-gui": "^0.17.0",
     "postcss-pxtorem": "^6.0.0",
