--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jounery",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
     "build-only": "vite build",
