--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "lil-gui": "^0.17.0",
     "postcss-pxtorem": "^6.0.0",
     "three": "^0.144.0",
+    "ua-parser-js": "^1.0.32",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^16.11.56",
+    "@types/ua-parser-js": "^0.7.36",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
