--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bin-wrapper": "npm:bin-wrapper-china"
   },
   "dependencies": {
+    "@types/stats.js": "^0.17.0",
     "@types/three": "^0.144.0",
     "@vueuse/components": "^9.4.0",
     "@vueuse/core": "^9.4.0",
@@ -19,6 +20,7 @@
     "gsap": "^3.11.2",
     "lil-gui": "^0.17.0",
     "postcss-pxtorem": "^6.0.0",
+    "stats.js": "^0.17.0",
     "three": "^0.144.0",
     "ua-parser-js": "^1.0.32",
     "vue": "^3.2.38",
