--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "stats.js": "^0.17.0",
     "three": "^0.144.0",
     "ua-parser-js": "^1.0.32",
+    "vite-plugin-preload": "^0.2.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
